[package]
name = "pathranger"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Cannon <alexander.cannon@farpointlabs.com>"]
description = "A file system navigation enhancement tool"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
rusqlite = "0.34.0"
shellexpand = "3.1.0"
